--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -748,6 +748,18 @@ footer.entry-meta .meta-in {
 
 
 **********************************************************************/
+.circle {
+  margin-left :33px;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px; 
+  border: 1px solid;
+  /* width and height can be anything, as long as they're equal */
+}
+.padding{
+
+     /* padding-left: 36px;*/
+}
 #footer {
   background: #232323;
   padding: 30px 0 0 0;
